<resources>
    <string name="app_name">Film n TV</string>
    <string name="title">Title</string>
    <string name="date">Date Release</string>
    <string name="genre">Genre</string>
    <string name="TabFilm">Film</string>
    <string name="TabTV">TV</string>
    <string name="production">Production</string>
    <string name="overview">Overview</string>
    <string-array name="film_title">
        <item>Jumanji</item>
        <item>Godzilla vs Kong</item>
        <item>Tom and Jerry</item>
        <item>Train to Busan: Peninsula</item>
        <item>One Piece: Stampede</item>
        <item>Stand by Me Doraemon 2</item>
        <item>Avatar 2</item>
        <item>Gemini Man</item>
        <item>Tenet</item>
        <item>Wonder Woman 1984</item>
    </string-array>
    <string-array name="film_daterelease">
        <item>January, 20 2021</item>
        <item>Maret, 26 2021</item>
        <item>February, 26 2021</item>
        <item>July, 15 2020</item>
        <item>September, 18 2019</item>
        <item>November, 20 2020</item>
        <item>Desember, 16 2022</item>
        <item>October, 2 2019</item>
        <item>August, 22 2020</item>
        <item>Desember, 16 2020</item>
    </string-array>
    <string-array name="film_genre">
        <item>Adventure, Comedy</item>
        <item>Action, Science Fiction</item>
        <item>Comedy, Family, Adventure</item>
        <item>Action, Horror, Thriller</item>
        <item>Animation, Action, Adventure</item>
        <item>Animation</item>
        <item>Action, Adventure, Science Fiction, Fantasy, Thriller</item>
        <item>Science Fiction, Action, Drama, Thriller</item>
        <item>Action, Thriller, Science Fiction</item>
        <item>Fantastic, Action, Adventure</item>
    </string-array>
    <string-array name="film_ph">
        <item>Anchors</item>
        <item>Legendary Picture</item>
        <item>Warner Bros</item>
        <item>Redpeter Films</item>
        <item>Toei Animations</item>
        <item>CBI Picture</item>
        <item>20th Century Fox</item>
        <item>Paramount Picture</item>
        <item>Warner bros</item>
        <item>DC</item>
    </string-array>
    <string-array name="film_desc">
        <item>Set in 1869, two children receive a mysterious game after their father goes missing in the jungles of Africa. They unravel both the secret of their father’s disappearance and the origin of Jumanji. See how it all began.</item>
        <item>Legends collide as Godzilla and Kong, the two most powerful forces of nature, clash in a spectacular battle for the ages! The monster war rages on the surface and deep within our world as the spectacular secret realm of the titans known as the hollow earth is revealed</item>
        <item>Tom the cat and Jerry the mouse get kicked out of their home and relocate to a fancy New York hotel, where a scrappy employee named Kayla will lose her job if she can\'t evict Jerry before a high-class wedding at the hotel. Her solution? Hiring Tom to get rid of the pesky mouse.</item>
        <item>A soldier and his team battle hordes of post-apocalyptic zombies in the wastelands of the Korean Peninsula.</item>
        <item>One Piece: Stampede is a stand-alone film that celebrates the anime\'s 20th Anniversary and takes place outside the canon of the "One Piece" TV series. Monkey D. Luffy and his Straw Hat pirate crew are invited to a massive Pirate Festival that brings many of the most iconic characters from throughout the franchise to participate in competition with the Straw Hats to find Roger\'s treasure. It also pits the Straw Hats against a new enemy named Bullet, a former member of Roger\'s crew.</item>
        <item>She and her beloved Shizuka are finally married! Nobita\'s childhood dream was supposed to come true on his wedding day, but for some reason, Nobita doesn\'t show up. One of the most popular episodes from the original story transcends time and space, and leads to Nobita\'s future. Doraemon and Nobita\'s great adventure begins in order to fulfill his grandmother\'s wish to see his bride at first sight. This is a story of tears and bonds, set in the past, present and future.</item>
        <item>Avatar: The Way of Water will once again follow Sam Worthington\’s Jake Sully twelve years after exploring Pandora and joining the Na\’vi. He has since raised a family with Neytiri, portrayed by Zoe Saldana, and established himself within the clans of the new world. Of course, peace can only last so long. Especially when the military organisation from the original film returns to “finish what they started”.</item>
        <item>Henry Brogan is an elite 51-year-old assassin who\'s ready to call it quits after completing his 72nd job. His plans get turned upside down when he becomes the target of a mysterious operative who can seemingly predict his every move. To his horror, Brogan soon learns that the man who\'s trying to kill him is a younger, faster, cloned version of himself.</item>
        <item>Armed with only one word - Tenet - and fighting for the survival of the entire world, the Protagonist journeys through a twilight world of international espionage on a mission that will unfold in something beyond real time.</item>
        <item>Wonder Woman comes into conflict with the Soviet Union during the Cold War in the 1980s and finds a formidable foe by the name of the Cheetah.</item>
    </string-array>
    <string-array name="tv_title">
        <item>Alice in Borderland</item>
        <item>Sweet Home</item>
        <item>Demon Slayer: Kimetsu no Yaiba</item>
        <item>Haikyuu!!</item>
        <item>Haikyuu!!: To The Top</item>
        <item>Jujutsu Kaisen</item>
        <item>Mushoku Tensei: Jobless Reincarnation</item>
        <item>Attack on Titan: The Final Season</item>
        <item>2.43: Seiin High School Boys Volleyball Team</item>
        <item>WandaVision</item>
    </string-array>
    <string-array name="tv_daterelease">
        <item>December, 10 2020</item>
        <item>December, 18 2020</item>
        <item>April, 6 2019</item>
        <item>April, 6 2014</item>
        <item>January, 11 2020</item>
        <item>October, 3 2020</item>
        <item>January, 11 2021</item>
        <item>December, 7 2020</item>
        <item>January, 8 2021</item>
        <item>January, 15 2021</item>
    </string-array>
    <string-array name="tv_genre">
        <item>Drama, Mystery, Action and Adventure</item>
        <item>Drama, Sci-Fi and Fantasy</item>
        <item>Animation, Drama, Sci-Fi, Fantasy, Action and Adventure</item>
        <item>Animation, Comedy, Drama</item>
        <item>Animation, Comedy, Drama</item>
        <item>Animation, Action, Adventure, Sci-Fi and Fantasy</item>
        <item>Animation, Drama, Comedy, Action, Adventure, Sci-Fi and Fantasy</item>
        <item>Animation, Sci-Fi, Fantasy, Action, Adventure, Drama, War, Politics and Mystery</item>
        <item>Animation, Drama</item>
        <item>Sci-Fi, Fantasy, Action, Adventure, Mystery and Comedy</item>
    </string-array>
    <string-array name="tv_ph">
        <item>Netflix</item>
        <item>Netflix</item>
        <item>Ufotable</item>
        <item>TV Tokyo</item>
        <item>TV Tokyo</item>
        <item>Mappa</item>
        <item></item>
        <item>Mappa</item>
        <item></item>
        <item>Marvel Studios</item>
    </string-array>
</resources>